--- a/cborgmulti/src/main/resources/application.properties
+++ b/cborgmulti/src/main/resources/application.properties
@@ -17,14 +17,14 @@ jdbc.Main.url=jdbc:mysql://localhost:3306/cborgmulti_main?useUnicode=true&amp;ch
 jdbc.Main.username=toasthub
 jdbc.Main.password=T0asth3b#
 
-securitytenant.datasources[0].tenantId=internet
+securitytenant.datasources[0].tenantId=INTERNET
 securitytenant.datasources[0].url=jdbc:mysql://localhost:3306/cborgmulti_main_internet?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 securitytenant.datasources[0].username=toasthub
 securitytenant.datasources[0].password=T0asth3b#
 securitytenant.datasources[0].driverClassName=com.mysql.jdbc.Driver
 
-securitytenant.datasources[1].tenantId=garagecloud
-securitytenant.datasources[1].url=jdbc:mysql://localhost:3306/cborgmulti_main_garagecloud?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+securitytenant.datasources[1].tenantId=CBORGTECH
+securitytenant.datasources[1].url=jdbc:mysql://localhost:3306/cborgmulti_main_cborgtech?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 securitytenant.datasources[1].username=toasthub
 securitytenant.datasources[1].password=T0asth3b#
 securitytenant.datasources[1].driverClassName=com.mysql.jdbc.Driver
@@ -37,14 +37,14 @@ hibernate.multitenant.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.multitenant.show_sql=true
 hibernate.multitenant.format_sql=false
 
-datatenant.datasources[0].tenantId=internet
+datatenant.datasources[0].tenantId=INTERNET
 datatenant.datasources[0].url=jdbc:mysql://localhost:3306/cborgmulti_internet?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 datatenant.datasources[0].username=toasthub
 datatenant.datasources[0].password=T0asth3b#
 datatenant.datasources[0].driverClassName=com.mysql.jdbc.Driver
 
-datatenant.datasources[1].tenantId=garagecloud
-datatenant.datasources[1].url=jdbc:mysql://localhost:3306/cborgmulti_garagecloud?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+datatenant.datasources[1].tenantId=CBORGTECH
+datatenant.datasources[1].url=jdbc:mysql://localhost:3306/cborgmulti_cborgtech?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 datatenant.datasources[1].username=toasthub
 datatenant.datasources[1].password=T0asth3b#
 datatenant.datasources[1].driverClassName=com.mysql.jdbc.Driver
